prevent name from wrapping

--- a/src/script/body/Header/style.css
+++ b/src/script/body/Header/style.css
@@ -19,6 +19,7 @@
             display: inline-flex;
             align-items: center;
             margin: * auto;
+            white-space: nowrap;
             overflow: hidden;
             transform: translateX(calc(50% - 3rem));
             transition: transform 350ms linear;
